# sokudo

./: .gitignore  Cargo.toml
crates/sokudo-core/: Cargo.toml
crates/sokudo-core/src/: coefficient.rs  collider.rs  contact.rs  lib.rs  math.rs  particle.rs  rigid_body.rs  run.rs  transform.rs  world.rs
crates/sokudo-core/src/collisions/: collider.rs  contact.rs  contact_query.rs  mod.rs  particle.rs  rigid_body.rs  util.rs
crates/sokudo-core/src/constraint/: collision.rs  distance.rs  mod.rs  restitution.rs
crates/sokudo-core/src/constraint/collision/: mod.rs  restitution.rs
crates/sokudo-core/src/shape/: cuboid.rs  mod.rs
crates/sokudo-io/: Cargo.toml
crates/sokudo-io/src/: collider.rs  lib.rs  transform.rs
crates/sokudo-io/src/read/: collider.rs  constraint.rs  defaults.rs  mod.rs  transform.rs  types.rs
crates/sokudo-io/src/write/: collider.rs  inspect.rs  mod.rs  transform.rs
crates/sokudo-io/tests/: read.rs  test-world.ron
crates/sokudo-playback/: Cargo.toml
crates/sokudo-playback/src/: camera.rs  lib.rs  player.rs  util.rs
src/: main.rs
